--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
     <title>DevBlog</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height: 100vh;"></div>
   </body>
 </html>
