deploy: 60b7ae87bcb209a79d934ab5415f981e97eb1e96

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
       <p class="article-date">August 5, 2021</p>
       
         
-  <a href="/blog/blog/tags#test" >
+  <a href="/blog/tags#test" >
     <span class="tag-code">test</span>
   </a>
 
